# wav_to_flac

./: .gitignore  Cargo.toml  build.rs
lib-flac/: Makefile  config.h  config.status  libtool
lib-flac/doc/: Makefile
lib-flac/doc/html/: Makefile
lib-flac/examples/: Makefile
lib-flac/examples/c/: Makefile
lib-flac/examples/cpp/: Makefile
lib-flac/include/: Makefile
lib-flac/include/FLAC/: Makefile
lib-flac/include/FLAC++/: Makefile
lib-flac/include/share/: Makefile
lib-flac/include/test_libs_common/: Makefile
lib-flac/m4/: Makefile
lib-flac/man/: Makefile
lib-flac/microbench/: Makefile  benchmark_residual
lib-flac/microbench/.deps/: benchmark_residual.Po  util.Po
lib-flac/objs/: Makefile
lib-flac/objs/debug/: Makefile
lib-flac/objs/release/: Makefile
lib-flac/src/: Makefile
lib-flac/src/flac/: Makefile  encode.c  encode.h  flac
lib-flac/src/libFLAC++/: Makefile  libFLAC++.la  (+2 more)
lib-flac/test/: 50c.flac  50c.skip10.flac  50c.skip10.until30.flac  50c.skip10.until39.flac  50c.skip10.until40.flac  50c.skip11.flac  50c.skip20.flac  50c.skip20.until30.flac  50c.skip20.until40.flac  50c.skip30.flac  50c.skip40.flac  50c.until10.flac  50c.until20.flac  50c.until30.flac  50c.until39.flac  50c.until40.flac  Makefile  file0s.aiff  file0s.flac  file0s.raw  file1.aiff  file1.raw  file1s.aiff  file1s.flac  file1s.raw  file2.flac  file2s.aiff  file2s.flac  file2s.raw  fsd16-01.flac  fsd16-02.flac  fsd16-03.flac  fsd16-04.flac  fsd16-05.flac  fsd16-06.flac  fsd16-07.flac  fsd24-01.flac  fsd24-02.flac  fsd24-03.flac  fsd24-04.flac  (+308 more)
src/: lib.rs
(+199 files in other folders)
