[package]
name = "wav_to_flac"
version = "0.1.0"
authors = ["Blaine Kasten <blainekasten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
cxx = "0.3"

[build-dependencies]
cxx-build = "0.3"